samples/_failures_safe/1761494499_3d7800_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32e29319.c: In function ‘read_operator’:
./samples/SAFE/__tmp_32e29319.c:168:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_32e29319.c:168:5: error: expected declaration or statement at end of input
